project-08-remote-backend-vpc-ec2/ec2.tf
resource "aws_instance" "project_ec2" {
  ami                         = var.ami_id
  instance_type               = var.instance_type
  subnet_id                   = aws_subnet.public_subnet.id
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = true

  tags = {
    Name = "project-08-ec2"
  }
}
