project-08-remote-backend-vpc-ec2/internet-gateway.tf
resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "project-08-igw"
  }
}
