project-08-remote-backend-vpc-ec2/vpc.tf
resource "aws_vpc" "main_vpc" {
  cidr_block = var.vpc_cidr

  tags = {
    Name = "project-08-vpc"
  }
}
